# primitive_image

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: arguments.rs  cubic_bezier.rs  ellipse.rs  lib.rs  main.rs  point.rs  polygon.rs  primitive_image.rs  quadratic_bezier.rs  rectangle.rs  runner.rs  shape.rs  triangle.rs  utilities.rs
