[package]
name = "primitive_image"
version = "0.1.0"
authors = ["samgoldman <sgoldman216@gmail.com>"]
edition = "2018"

[lib]
name = "primitive_image"
path = "src/lib.rs"

[[bin]]
name = "primitive_image"
path = "src/main.rs"

[dependencies]
imageproc = "0.18.0"
image = "0.21.0"
svg = "0.5.12"
rand = "0.6"
structopt = "0.2.14"
log = "0.4.6"
simplelog = "0.5.3"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = true