[package]
name = "primitive_image"
version = "0.1.0"
authors = ["samgoldman <sgoldman216@gmail.com>"]
edition = "2021"

[lib]
name = "primitive_image"
path = "src/lib.rs"

[[bin]]
name = "primitive_image"
path = "src/main.rs"

[dependencies]
imageproc = "0.20.0"
image = "0.23.4"
svg = "0.8.0"
rand = "0.7.3"
rand_distr = "0.2.2"
structopt = "0.3.14"
log = "0.4.8"
simplelog = "0.8.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = true
