[package]
name = "primitive_image"
version = "0.1.0"
authors = ["samgoldman <sgoldman216@gmail.com>"]
edition = "2021"

[lib]
name = "primitive_image"
path = "src/lib.rs"

[[bin]]
name = "primitive_image"
path = "src/main.rs"

[dependencies]
imageproc = "0.23.0"
image = "0.24.2"
svg = "0.10.0"
rand = "0.8.5"
rand_distr = "0.4.3"
structopt = "0.3.26"
log = "0.4.17"
simplelog = "0.12.0"

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
debug = true
